--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.properties.hibernate.id.new_generator_mappings=false
 spring.datasource.url=jdbc:mysql://localhost:3306/product_schema
 spring.datasource.username=root
 spring.datasource.password=root
+spring.application.name=review-service
+eureka.client.healthcheck.enabled=true
+eureka.client.serviceUrl.default-zone=http://localhost:8761/eureka
