--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8086
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.id.new_generator_mappings=false
-spring.datasource.url=jdbc:mysql://localhost:3306/product_schema
+spring.datasource.url=jdbc:mysql://localhost:3306/review_schema
 spring.datasource.username=root
 spring.datasource.password=root
